# neurofaune

./: .gitignore  .pre-commit-config.yaml  BATCH_PROCESSING_GUIDE.md  CAPABILITIES.md  CLAUDE.md  MODERNIZATION_PLAN.md  Makefile  PREPROCESSING_EXPLORATION.md  README.md  ROADMAP.md  STATUS.md  WORKFLOWS_SUMMARY.md  batch_anatomical_preprocessing.py  build_templates.py  irl-template-analysis.md  irl-template-preprocessing.md  pyproject.toml  test_adaptive_skull_strip.py  test_dwi_workflow.py  test_msme_workflow.py  test_workflows.py
.github/workflows/: ci.yml
configs/: bpa_rat_example.yaml  default.yaml
docs/: ARCHITECTURE.md  ATLAS_GUIDE.md  BRUKER_CONVERSION_SUMMARY.md  CLEANUP_TODO.md  EXPERIMENTAL_SKULL_STRIPPING_CHANGES.md  MSME_MWF_OPTIMIZATION.md  MULTIMODAL_TEMPLATE_ARCHITECTURE.md  SKULL_STRIPPING_COMPARISON.md  TBSS_GUIDE.md
docs/archive/: PHASE1_SUMMARY.md  SKULL_STRIPPING_TROUBLESHOOTING.md
docs/plans/: ANAT_PREPROCESSING_WORKFLOW_PLAN.md  TBSS_IMPLEMENTATION_PLAN.md
neurofaune/: capabilities.py  config.py  config_validator.py  study_initialization.py
neurofaune/analysis/: __init__.py  progress.py  provenance.py  randomise_analysis.py
neurofaune/atlas/: __init__.py  manager.py  slice_extraction.py
neurofaune/connectome/: __init__.py  functional.py  graph_metrics.py  matrices.py  nbs.py  pipeline.py  roi_extraction.py  visualization.py  whole_network.py
neurofaune/network/: __init__.py  edge_regression.py  fc_graph_theory.py  functional.py  graph_theory.py  matrices.py  mcca.py  mcca_visualization.py  regression.py  roi_extraction.py
neurofaune/preprocess/: cli.py
neurofaune/registration/: __init__.py  qc_visualization.py  slice_correspondence.py
neurofaune/reporting/: __init__.py  discover.py  index_generator.py  registry.py  section_renderers.py  summarize.py
neurofaune/templates/: __init__.py  anat_registration.py  builder.py  manifest.py  registration.py  registration_qc.py  slice_registration.py
neurofaune/utils/: bids.py  bruker_convert.py  exclusion.py  fix_bruker_voxel_sizes.py  orientation.py  select_anatomical.py  transforms.py
plans/: main-plan-activity.md  main-plan-log.csv  main-plan.md
scripts/: batch_falff_analysis.py  batch_fc_analysis.py  batch_preprocess_anat.py  batch_preprocess_dwi.py  batch_preprocess_for_templates.py  batch_preprocess_func.py  batch_preprocess_msme.py  batch_register_bold_to_t2w.py  batch_register_bold_to_template.py  batch_register_dwi.py  batch_register_fa_to_t2w.py  batch_register_fa_to_template.py  batch_register_msme.py  batch_reho_analysis.py  batch_resting_state_analysis.py  batch_skull_strip_qc.py  batch_warp_bold_to_sigma.py  build_templates.py  build_tissue_templates.py  check_and_scale_sigma_atlas.py  convert_3d_rare_to_bids.py  convert_bruker_to_bids.py  covnet_common.py  covnet_graph_metrics.py  covnet_nbs.py  covnet_prepare.py  covnet_territory.py  covnet_whole_network.py  create_better_qc.py  extract_bruker_mrs.py  extract_roi_means.py  fit_multishell_models.py  generate_analysis_index.py  generate_anat_qc_retroactive.py  generate_batch_qc.py  generate_findings_summary.py  generate_func_qc_retroactive.py  generate_func_registration_qc.py  generate_omnibus_qc.py  generate_tbss_qc_maps.py  (+53 more)
scripts/archive/: README_skull_strip_optimization.md  SKULL_STRIP_COMPARISON.md  optimize_func_skull_strip.py  run_skull_strip_sweep.sh  test_B_flag_minimal_morphology.py  test_atropos_direct.py  test_dwi_workflow_p60.py  test_light_parameters.py  test_multiple_skull_strip_params.py  test_preprocessed_skull_strip.py  visualize_posteriors.py
scripts/dev_registration/: 001_explore_geometry.py  002_detailed_geometry.py  003_register_dwi_to_t2w.py  004_batch_preprocess_dwi.py  005_build_fa_templates.py  006_propagate_atlas_to_dwi.py  007_register_subject_to_template.py  (+4 more)
tests/: __init__.py
(+133 files in other folders)
