[project]
name = "neurofaune"
version = "0.1.0-alpha"
description = "Rodent-specific MRI preprocessing, analysis, and connectivity package"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Neurofaune Contributors"}
]
keywords = ["neuroscience", "neuroimaging", "mri", "rodent", "preprocessing", "rat", "mouse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core neuroimaging
    "nipype>=1.10.0",
    "nibabel>=5.3.2",
    "pydicom>=3.0.1",

    # Diffusion imaging
    "dipy>=1.11.0",

    # Functional imaging
    "nilearn>=0.10.0,<0.11",  # For compatibility

    # Scientific computing
    "numpy>=1.24,<3.0",
    "scipy>=1.14",
    "pandas>=2.0",
    "scikit-learn>=1.0",

    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",

    # Configuration and CLI
    "pyyaml>=6.0",
    "click>=8.1.0",

    # Utilities
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

fslmrs = [
    "fsl-mrs>=2.0",  # FSL-MRS for spectroscopy
]

bruker = [
    "bruker2nifti>=1.0",  # Bruker file conversion
]

all = [
    "neurofaune[dev,fslmrs,bruker]",
]

[project.scripts]
neurofaune = "neurofaune.preprocess.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/neurofaune"
Documentation = "https://neurofaune.readthedocs.io"
Repository = "https://github.com/yourusername/neurofaune"
Issues = "https://github.com/yourusername/neurofaune/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neurofaune", "neurofaune.preprocess", "neurofaune.atlas", "neurofaune.utils"]

[tool.setuptools.package-data]
neurofaune = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | work
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "nipype.*",
    "nibabel.*",
    "dipy.*",
    "nilearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
